[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/menu/shipyard/ShipClassDetails.gd" type="Script" id=1]
[ext_resource path="res://scenes/menu/shipyard/ShipDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/menu/shipyard/LabeledField.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/arrow_right.png" type="Texture" id=4]
[ext_resource path="res://sprites/arrow.png" type="Texture" id=5]

[node name="ShipClassDetails" type="HBoxContainer"]
margin_right = 81.0
margin_bottom = 86.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayContainer" type="HBoxContainer" parent="."]
margin_right = 275.0
margin_bottom = 200.0
rect_min_size = Vector2( 275, 0 )
alignment = 1

[node name="PreviousColor" type="Button" parent="DisplayContainer"]
margin_left = 5.0
margin_top = 89.0
margin_right = 33.0
margin_bottom = 111.0
size_flags_vertical = 4
icon = ExtResource( 5 )

[node name="DisplayCenterer" type="CenterContainer" parent="DisplayContainer"]
margin_left = 37.0
margin_right = 237.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )

[node name="ShipDisplay" parent="DisplayContainer/DisplayCenterer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_top = 100.0
margin_right = 100.0
margin_bottom = 100.0

[node name="NextColor" type="Button" parent="DisplayContainer"]
margin_left = 241.0
margin_top = 89.0
margin_right = 269.0
margin_bottom = 111.0
size_flags_vertical = 4
icon = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 279.0
margin_top = 93.0
margin_right = 315.0
margin_bottom = 107.0
text = "         "

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 319.0
margin_top = 36.0
margin_right = 396.0
margin_bottom = 164.0
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Model" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_right = 77.0
margin_bottom = 14.0
field_name = "Model"

[node name="MainThrust" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 18.0
margin_right = 77.0
margin_bottom = 32.0
field_name = "Main Thrust"

[node name="RotationPower" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 36.0
margin_right = 77.0
margin_bottom = 50.0
field_name = "Rotation Speed"

[node name="HoldSize" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 54.0
margin_right = 77.0
margin_bottom = 68.0
field_name = "Hold Size"

[node name="InStock" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 72.0
margin_right = 77.0
margin_bottom = 86.0
field_name = "In Stock"

[node name="Price" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 90.0
margin_right = 77.0
margin_bottom = 104.0
field_name = "Price"

[node name="BuyButton" type="Button" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 77.0
margin_bottom = 128.0
text = "Buy"
